# AndyClaw

./: .gitignore  AGENT_DISPLAY_API.md  AndyClaw_Final_Sprint_Plan.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SYSTEM_PROMPT.md  andy-cli.py  build.gradle.kts  gradle.properties  settings.gradle.kts  tinfoil-proxy-implementation.md
AndyClaw/: build.gradle.kts
AndyClaw/schemas/org.ethereumphone.andyclaw.agenttx.db.AgentTxDatabase/: 1.json
AndyClaw/schemas/org.ethereumphone.andyclaw.memory.db.MemoryDatabase/: 1.json
AndyClaw/schemas/org.ethereumphone.andyclaw.sessions.db.SessionDatabase/: 1.json
AndyClaw/src/main/java/org/ethereumphone/andyclaw/: AndyClaw.kt
ExtensionExample/: README.md  build.gradle.kts
ExtensionExample/src/androidTest/java/org/ethereumphone/extensionexample/: ExampleInstrumentedTest.kt
ExtensionExample/src/main/: AndroidManifest.xml
ExtensionExample/src/main/res/raw/: extension_manifest.json
ExtensionExample/src/main/res/values/: strings.xml
app/: build.gradle.kts  proguard-rules.pro
app/src/debug/res/xml/: network_security_config.xml
app/src/main/: AndroidManifest.xml
app/src/main/aidl/android/os/: IAgentAccessibilityProxy.aidl  IAgentDisplayService.aidl
app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  network_security_config.xml  privapp_permissions_andyclaw.xml
gradle/: libs.versions.toml
guides/: termux-setup.md
tinfoil-bridge/: README.md
tinfoil-bridge/go/: bridge.go  go.mod  go.sum
(+246 files in other folders)
